# AGAMAb

./: CMakeLists.txt  Makefile  Makefile.list  Makefile.msvc
Py/: Py_agama.cpp  Py_agama.sln  Py_agama.vcxproj  Py_agama.vcxproj.filters  example_self_consistent_model.py  orbitexample.py  setup.py  torusexample2.py
SRC/: actions_base.h  actions_focal_distance_finder.cpp  actions_focal_distance_finder.h  actions_harmonicoscillator.cpp  actions_harmonicoscillator.h  actions_newgenfnc.cpp  actions_newgenfnc.h  actions_newisochrone.cpp  actions_newisochrone.h  actions_newtorus.cpp  actions_newtorus.h  actions_spherical.cpp  actions_spherical.h  actions_staeckel.cpp  actions_staeckel.h  agama.sln  agama.vcxproj  agama.vcxproj.filters  allocate.h  coord.cpp  coord.h  cubature.cpp  debug_utils.h  df_base.cpp  df_base.h  df_disk.cpp  df_disk.h  df_ergodic.cpp  df_ergodic.h  df_factory.cpp  df_factory.h  df_halo.cpp  df_halo.h  df_interpolated.cpp  df_interpolated.h  df_quasiisotropic.h  df_spherical.cpp  df_spherical.h  exploreGF.cpp  galaxymodel_base.cpp  (+88 more)
doc/: AGAMA_VS.tex  agama_vs.dvi  agama_vs.ps  obs.tex
